[package]
name = "dep-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonbon = { git = "https://github.com/lwus/bonbon.git", rev = "066303b868154d2e86a5ed3c675b346a59f5b523" }
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
mpl-token-metadata = "1.3.3"
solana-client = { git = "https://github.com/omertxyz/solana.git", rev = "c1e44fd635c9aa3ae31447fef19adeab2cd66943" }
solana-program = { git = "https://github.com/omertxyz/solana.git", rev = "c1e44fd635c9aa3ae31447fef19adeab2cd66943" }
solana-sdk = { git = "https://github.com/omertxyz/solana.git", rev = "c1e44fd635c9aa3ae31447fef19adeab2cd66943" }
solana-transaction-status = { git = "https://github.com/omertxyz/solana.git", rev = "c1e44fd635c9aa3ae31447fef19adeab2cd66943" }
spl-token-2022= "0.4.1"
solana-storage-bigtable = { git = "https://github.com/omertxyz/solana.git", rev = "c1e44fd635c9aa3ae31447fef19adeab2cd66943" }
bundlr-sdk = {git = "https://github.com/kaustavha/rust-sdk", rev = "beab2a990edfb71eeeffa7f42e93ff121b08286e" }
gimli = "0.26"
addr2line = "0.17"

[patch.crates-io]
aes-gcm-siv = { git = "https://github.com/lei2022/AEADs", rev = "d9d03399fbc1347a1c2941801c0743e847980757" }
curve25519-dalek = { git = "https://github.com/hariria/curve25519-dalek", rev = "1f39e7b369dc70f432370c9703229a45bfa9664e" }
solana-zk-token-sdk = { git = "https://github.com/omertxyz/solana.git", rev = "c1e44fd635c9aa3ae31447fef19adeab2cd66943" }
solana-program = { git = "https://github.com/omertxyz/solana.git", rev = "c1e44fd635c9aa3ae31447fef19adeab2cd66943" }