[package]
name = "dep-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonbon = { git = "https://github.com/lwus/bonbon.git", rev = "2acd5270e4ad91b23644182038296d7d7bb1f456" }
flate2 = { version = "=1.0.22", features = ["rust_backend", "tokio"], default-features = false }
mpl-token-metadata = "1.3.3"
solana-client = { git = "https://github.com/omertxyz/solana.git", rev = "097da23e81854cc87d7708cf69c4ac35cdcd3fec" }
solana-program = { git = "https://github.com/omertxyz/solana.git", rev = "097da23e81854cc87d7708cf69c4ac35cdcd3fec" }
solana-sdk = { git = "https://github.com/omertxyz/solana.git", rev = "097da23e81854cc87d7708cf69c4ac35cdcd3fec" }
solana-transaction-status = { git = "https://github.com/omertxyz/solana.git", rev = "097da23e81854cc87d7708cf69c4ac35cdcd3fec" }
spl-token-2022= "0.4.1"
solana-storage-bigtable = { git = "https://github.com/omertxyz/solana.git", rev = "097da23e81854cc87d7708cf69c4ac35cdcd3fec" }
bundlr-sdk = {git = "https://github.com/kaustavha/rust-sdk", rev = "beab2a990edfb71eeeffa7f42e93ff121b08286e" }
gimli = "0.26"
rustversion = "=1.0.8"
addr2line = "0.17"
slog-stdlog = "4.1.0"

[patch.crates-io]
aes-gcm-siv = { git = "https://github.com/lei2022/AEADs", rev = "d9d03399fbc1347a1c2941801c0743e847980757" }
curve25519-dalek = { git = "https://github.com/hariria/curve25519-dalek", rev = "1f39e7b369dc70f432370c9703229a45bfa9664e" }
solana-zk-token-sdk = { git = "https://github.com/omertxyz/solana.git", rev = "097da23e81854cc87d7708cf69c4ac35cdcd3fec" }
solana-program = { git = "https://github.com/omertxyz/solana.git", rev = "097da23e81854cc87d7708cf69c4ac35cdcd3fec" }