[package]
name = "dep-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonbon = { git = "https://github.com/lwus/bonbon.git", rev = "f2438d3515ab812ef636957ef15a61d03a318aa5" }
flate2 = { version = "=1.0.22", features = ["rust_backend", "tokio"], default-features = false }
mpl-token-metadata = { git = "https://github.com/omertxyz/solana-nft-metadata.git", rev = "9f8de6a744f63f095f6cf79f8e8c5b558dca1ae1" }
solana-client = { git = "https://github.com/omertxyz/solana.git", rev = "0da726b10057897deea09e849097c6076c04443d" }
solana-program = { git = "https://github.com/omertxyz/solana.git", rev = "0da726b10057897deea09e849097c6076c04443d" }
solana-sdk = { git = "https://github.com/omertxyz/solana.git", rev = "0da726b10057897deea09e849097c6076c04443d" }
solana-transaction-status = { git = "https://github.com/omertxyz/solana.git", rev = "0da726b10057897deea09e849097c6076c04443d" }
spl-token-2022= { version = "0.4.1", features = ["serde-traits"] }
solana-storage-bigtable = { git = "https://github.com/omertxyz/solana.git", rev = "0da726b10057897deea09e849097c6076c04443d" }
bundlr-sdk = {git = "https://github.com/kaustavha/rust-sdk", rev = "beab2a990edfb71eeeffa7f42e93ff121b08286e" }
gimli = "0.26"
rustversion = "=1.0.8"
addr2line = "0.17"
slog-stdlog = "4.1.0"

[patch.crates-io]
aes-gcm-siv = { git = "https://github.com/lei2022/AEADs", rev = "d9d03399fbc1347a1c2941801c0743e847980757" }
curve25519-dalek = { git = "https://github.com/hariria/curve25519-dalek", rev = "1f39e7b369dc70f432370c9703229a45bfa9664e" }
solana-zk-token-sdk = { git = "https://github.com/omertxyz/solana.git", rev = "0da726b10057897deea09e849097c6076c04443d" }
solana-program = { git = "https://github.com/omertxyz/solana.git", rev = "0da726b10057897deea09e849097c6076c04443d" }